--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -231,6 +231,11 @@ body {
             height: 3.8rem;
             margin: 0 auto 3rem;
         }
+        @media (max-width: $r_mob_500) {
+            width: 15rem;          
+            height: 5.8rem;
+            margin: 0 auto .5rem;
+        }
     }    
 }
 .container {
@@ -654,6 +659,9 @@ body {
         background-size: cover;
         position: relative;        
         z-index: 0;
+        @media (max-width: $r_mob_500) {
+            padding: 2.2rem 1.7rem;
+        }
         &_white {
             height: 520px;
             display: flex;
@@ -778,9 +786,14 @@ body {
             width: 100%;
             height: 322px;            
             text-align: center;
-                @media (max-width: $r_desc_hd) {
-            height: 250px;}
-        }
+            @media (max-width: $r_desc_hd) {
+                height: 250px;
+            }
+            @media (max-width: $r_mob_500) {
+                height: 100px;
+                margin-bottom: 1rem;
+            }
+        }               
         &__image {            
             width: 100%;
             max-width: 351px;
@@ -793,6 +806,10 @@ body {
             align-items: center;
             gap: 5%;
         } 
+        &__title {
+            text-align: center;
+            margin-bottom: 1.2rem;
+        }
         &__description {
             font-size: 1.8rem;
             color: rgba($green, 0.7);
@@ -801,10 +818,22 @@ body {
             min-height: 55px;
             max-width: 300px;
             line-height: 1.5;
+            @media (max-width: $r_mob_500) {
+                font-size: 1.5rem;
+                text-align: center;
+                max-width: 138px;
+                margin: 0 auto;
+            }        
         }
         &__price {
             font-size: 2.4rem;
             margin-bottom: 3rem;
+            @media (max-width: $r_mob_500) {
+                font-size: 1.8rem;
+                text-align: center;
+                margin-top: 0;
+                margin-bottom: 1.5rem;
+            }  
         }
     } 
                    
@@ -916,7 +945,8 @@ body {
 }
 .link {
     &-min {
-        padding: 2rem 3rem;
+        padding: 2rem 4rem;
+        font-size: 1.2rem;
     }
 } 
 
@@ -1047,11 +1077,18 @@ body {
     @media (max-width: $r_tab) {
         padding-bottom: 4rem;
     }
+    @media (max-width: $r_mob_500) {
+        margin-top: -3rem;
+    }
     &__list {
         margin-top: 8.5rem;
         margin-bottom: 5rem;
         @media (max-width: $r_tab) {
             margin-top: 5rem;
+        }
+        @media (max-width: $r_mob_500) {
+            margin-top: 5.5rem;
+            margin-bottom: 2.5rem;
         }
     }
     &__image {
@@ -1155,6 +1192,9 @@ body {
         @media (max-width: $r_tab) {            
             padding: 2.2rem 2rem 2.8rem;
         }
+        @media (max-width: $r_mob_500) {            
+            padding: 1.2rem 1rem 1.8rem;
+        }        
         &:hover {
             box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
         }
@@ -1168,6 +1208,9 @@ body {
         @media (max-width: $r_tab) {
             height: 150px;
         }
+        @media (max-width: $r_mob_500) {
+            height: 65px;
+        }        
     }
     &__title {
         font-family: $font-cormorant;
@@ -1178,6 +1221,10 @@ body {
         @media (max-width: $r_tab) {
             font-size: 2rem;
         }
+        @media (max-width: $r_mob_500) {
+            font-size: 1.7rem;
+            margin-top: 0;
+        }  
     }
     &__description {
         font-size: 1.6rem;
@@ -1190,6 +1237,10 @@ body {
         @media (max-width: $r_tab) {
             font-size: 1.3rem;
         }
+        @media (max-width: $r_mob_500) {
+            text-align: center;
+            margin-top: 0.5rem;
+        }  
     }
     &__price {
         font-size: 2.4rem;
@@ -1198,6 +1249,11 @@ body {
         @media (max-width: $r_tab) {
             font-size: 2rem;
         }
+        @media (max-width: $r_mob_500) {
+            font-size: 1.5rem;
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }  
     }
     &__footer {
         display: flex;
@@ -1552,6 +1608,9 @@ footer {
     border-top: 1px solid #d4d6cf;
     padding-top: 6.5rem;
     padding-bottom: 7rem;
+    @media (max-width: $r_tab) {
+        padding-top: 5.5rem;            
+    }   
 }
 
 .footer {
@@ -1587,17 +1646,26 @@ footer {
         @media (max-width: $r_tab) {
             margin-bottom: 3rem;            
         }
+        @media (max-width: $r_mob_500) {
+            margin-bottom: 1rem;
+        } 
         &:first-child {
             @media (max-width: $r_tab) {
                 display: flex;
                 justify-content: center;
                 gap: 3rem;
             }
+            @media (max-width: $r_mob_500) {
+                gap: 3.5rem;
+            } 
         }
     }
     &__item {            
         font-size: 1.8rem;
-        line-height: 4.7rem;            
+        line-height: 4.7rem; 
+        @media (max-width: $r_mob_500) {
+            font-size: 1.5rem;            
+        }         
     }
     &__link {
         text-decoration: none;
@@ -1621,6 +1689,9 @@ footer {
             font-size: 3rem;
             margin-bottom: 1rem;
         }
+        @media (max-width: $r_mob_500) {
+            font-size: 3.8rem;
+        } 
         &:hover {
             color: $orange;
         }   
@@ -1629,6 +1700,9 @@ footer {
         color: $green;
         text-decoration: none;  
         transition: .3s;
+        @media (max-width: $r_mob_500) {
+            font-size: 1.5rem;
+        } 
         &:hover {
             color: $orange;
         }                
@@ -1642,7 +1716,11 @@ footer {
         @media (max-width: $r_tab) {
             flex-direction: column;
             text-align: center;
-        }            
+        }      
+        @media (max-width: $r_mob_500) {
+            margin-top: 2rem;
+            font-size: 1.25rem;
+        }        
         p {
             display: block;
         }
@@ -1667,7 +1745,11 @@ footer {
         @media (max-width: 768px) {
         max-width: 230px;
         margin: 3rem auto 0;
-    }
+        }
+        @media (max-width: $r_mob_500) {
+            margin-top: 4.5rem;
+            max-width: 210px;
+        } 
     &__link {
         display: block;
         width: 4.6rem;
